--- a/ImageDuplicateFinder/MainWindow.xaml
+++ b/ImageDuplicateFinder/MainWindow.xaml
@@ -2,12 +2,37 @@
     x:Class="ImageDuplicateFinder.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ImageDuplicateFinder"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:controls="using:ImageDuplicateFinder.Controls" xmlns:models="using:ImageDuplicateFinder.Models" xmlns:views="using:ImageDuplicateFinder.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     mc:Ignorable="d">
     <Window.SystemBackdrop>
         <MicaBackdrop />
     </Window.SystemBackdrop>
-    <views:CompareImagesView/>
+    <Grid>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Stretch" Grid.Column="1" Height="30" x:Name="titleBar">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
+                <Image Grid.Column="0" Source="ms-appx:///Assets/AppIcon/Icon.png"
+                   HorizontalAlignment="Left" 
+                   Width="16" Height="16" 
+                   Margin="8,0"/>
+                <TextBlock Grid.Column="1" Text="ImageDuplicateFinder"
+                       TextWrapping="NoWrap"
+                       Style="{StaticResource CaptionTextBlockStyle}" 
+                       VerticalAlignment="Center"
+                       Margin="8,0,0,0"/>
+            </Grid>
+            <Button Grid.Row="0" Grid.Column="0" x:Name="navigateBackButton" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Left" VerticalAlignment="Top" Click="NavigateBack_Click">
+                <SymbolIcon Symbol="Back"/>
+            </Button>
+        </Grid>
+        <Frame Margin="0,30,0,0" x:Name="navigationFrame" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+    </Grid>
 </Window>
