--- a/ImageDuplicateFinder/Views/AboutPage.xaml
+++ b/ImageDuplicateFinder/Views/AboutPage.xaml
@@ -13,7 +13,7 @@
             <controls:SettingsItemSeparator/>
             <Grid VerticalAlignment="Stretch" MinWidth="{ThemeResource FlyoutThemeMinWidth}" Margin="0,5,0,0" CornerRadius="5" Padding="{StaticResource ExpanderHeaderPadding}" HorizontalAlignment="Stretch" Background="{ThemeResource ExpanderHeaderBackground}" BorderThickness="{ThemeResource ExpanderHeaderBorderThickness}" BorderBrush="{ThemeResource ExpanderHeaderBorderBrush}">
                 <StackPanel Height="70" Padding="0" Orientation="Horizontal">
-                    <Image HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10" Width="50" Height="50" Source="ms-appx:///Assets/AppIcon/Icon.png"/>
+                    <Image HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10" Width="50" Height="50" Source="ms-appx:///Assets/Icon.png"/>
                     <TextBlock Text="ImageDuplicateFinder" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Left"/>
                 </StackPanel>
                 <Grid Margin="0,0,20,0" HorizontalAlignment="Right" VerticalAlignment="Center">
@@ -39,11 +39,6 @@
             </Grid>
 
             <controls:SettingsItemSeparator Header="More"/>
-            <!--<controls:SettingsControl Tag="WEBSITE_URL" Clickable="True" Clicked="NavigateToLink_Click" Glyph="&#xEA8A;" Header="Website" HorizontalAlignment="Stretch" VerticalAlignment="Top">
-                <controls:SettingsControl.Content>
-                    <TextBlock Text="&#xe8a7;" FontFamily="{StaticResource SymbolThemeFontFamily}"/>
-                </controls:SettingsControl.Content>
-            </controls:SettingsControl>-->
             <controls:SettingsControl Tag="https://github.com/FrozenAssassine/ImageDuplicateFinder" Clickable="True" Clicked="NavigateToLink_Click" Glyph="&#xE946;" Header="Github" HorizontalAlignment="Stretch" VerticalAlignment="Top">
                 <controls:SettingsControl.Content>
                     <TextBlock Text="&#xe8a7;" FontFamily="{StaticResource SymbolThemeFontFamily}"/>
